codeanywhere_workspace/routes/temp/1edb0d951bedb16945e2/errors
/usercode/file.cpp: In function 'int main()':
/usercode/file.cpp:6:2: error: expected ';' before 'return'
  return 0;
  ^
